--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,33 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>ExpressGeneratorTypeScriptApp</title>
+        <title>Sample website</title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <script
+			  src="https://code.jquery.com/jquery-3.5.1.min.js"
+			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			  crossorigin="anonymous"></script>
     </head>
     <body>
-
-        <!-- Add Users -->
-        <div class="users-column add-user-col">
-            <div class="column-header">Add User:</div>
-            <div>
-                <input id="name-input" placeholder="Name">
-            </div>
-            <div>
-                <input id="email-input" placeholder="Email">
-            </div>
-            <div>
-                <button id="add-user-btn">Add</button>
-            </div>
-        </div>
-
-        <!-- Display Users -->
-        <div class="users-column">
-            <div class="column-header">Users:</div>
-            <div id="all-users-anchor"></div>
-        </div>
-
-
-
+        <main class="container">
+            <h1>Welcome to my website</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus lorem, tincidunt sit amet metus ac, congue molestie mi. Donec a felis vulputate, volutpat felis at, accumsan lectus. Quisque gravida odio id faucibus tempor. Nunc vestibulum tristique augue, non fringilla lorem. Aenean vulputate orci libero. Vestibulum at lobortis quam, ac interdum felis. Quisque mollis mollis dolor quis eleifend. In lacinia mollis justo et suscipit. Curabitur sollicitudin cursus tempus.
+                In eget risus nulla. Fusce pharetra mattis velit, non feugiat nunc ultrices commodo. Etiam sit amet tellus luctus, lobortis quam sed, vestibulum dui. Nam turpis sem, congue non cursus ut, dictum sit amet lectus. Curabitur tincidunt sem sit amet nisl malesuada, in malesuada metus interdum. Proin sed felis sit amet sem fermentum commodo ac eu ante. Duis id dolor auctor, lacinia lacus in, tincidunt nunc. Maecenas aliquam id nibh quis dapibus. Sed sodales tincidunt nunc, quis malesuada leo. Donec venenatis neque magna, ut ultricies erat consequat vel. Ut pulvinar, risus nec maximus volutpat, tortor nibh tempor ante, et egestas leo sapien eget turpis. Nulla facilisi. Vestibulum et tortor sit amet est dapibus rhoncus. Quisque quis nisi id nibh pharetra luctus quis volutpat libero. Pellentesque pellentesque congue nibh in lacinia.                
+            </p>
+            <div data-ad class="ad-placeholder">.</div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus lorem, tincidunt sit amet metus ac, congue molestie mi. Donec a felis vulputate, volutpat felis at, accumsan lectus. Quisque gravida odio id faucibus tempor. Nunc vestibulum tristique augue, non fringilla lorem. Aenean vulputate orci libero. Vestibulum at lobortis quam, ac interdum felis. Quisque mollis mollis dolor quis eleifend. In lacinia mollis justo et suscipit. Curabitur sollicitudin cursus tempus.
+                In eget risus nulla. Fusce pharetra mattis velit, non feugiat nunc ultrices commodo. Etiam sit amet tellus luctus, lobortis quam sed, vestibulum dui. Nam turpis sem, congue non cursus ut, dictum sit amet lectus. Curabitur tincidunt sem sit amet nisl malesuada, in malesuada metus interdum. Proin sed felis sit amet sem fermentum commodo ac eu ante. Duis id dolor auctor, lacinia lacus in, tincidunt nunc. Maecenas aliquam id nibh quis dapibus. Sed sodales tincidunt nunc, quis malesuada leo. Donec venenatis neque magna, ut ultricies erat consequat vel. Ut pulvinar, risus nec maximus volutpat, tortor nibh tempor ante, et egestas leo sapien eget turpis. Nulla facilisi. Vestibulum et tortor sit amet est dapibus rhoncus. Quisque quis nisi id nibh pharetra luctus quis volutpat libero. Pellentesque pellentesque congue nibh in lacinia.                
+            </p>
+        </main>
     </body>
     <script src="scripts/index.js"></script>
 </html>
